artifacts/test_reports/pytest_output.txt

==================================== ERRORS ====================================
______________________ ERROR collecting test_kl_direct.py ______________________
ImportError while importing test module '/workspace/test_kl_direct.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
/usr/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
test_kl_direct.py:23: in <module>
    from metrics import calculate_kl_divergence, calculate_kl_divergence_between_runs
src/rldk/evals/metrics/__init__.py:4: in <module>
    from .throughput import evaluate_throughput
src/rldk/evals/metrics/throughput.py:12: in <module>
    from ...utils.math_utils import safe_divide, safe_rate_calculation
E   ImportError: attempted relative import beyond top-level package
____________ ERROR collecting tests/e2e/test_real_world_trl_demo.py ____________
.venv_dev/lib/python3.13/site-packages/trl/import_utils.py:144: in _get_module
    return importlib.import_module("." + module_name, self.__name__)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
<frozen importlib._bootstrap_external>:1026: in exec_module
    ???
<frozen importlib._bootstrap>:488: in _call_with_frames_removed
    ???
.venv_dev/lib/python3.13/site-packages/trl/models/modeling_value_head.py:19: in <module>
    from .modeling_base import PreTrainedModelWrapper
.venv_dev/lib/python3.13/site-packages/trl/models/modeling_base.py:32: in <module>
    from transformers import GenerationMixin, PreTrainedModel, is_torch_npu_available, is_torch_xpu_available
<frozen importlib._bootstrap>:1412: in _handle_fromlist
    ???
.venv_dev/lib/python3.13/site-packages/transformers/utils/import_utils.py:2302: in __getattr__
    module = self._get_module(self._class_to_module[name])
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv_dev/lib/python3.13/site-packages/transformers/utils/import_utils.py:2332: in _get_module
    raise e
.venv_dev/lib/python3.13/site-packages/transformers/utils/import_utils.py:2330: in _get_module
    return importlib.import_module("." + module_name, self.__name__)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv_dev/lib/python3.13/site-packages/transformers/modeling_utils.py:491: in <module>
    if is_torch_greater_or_equal("2.3.0"):
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv_dev/lib/python3.13/site-packages/transformers/utils/import_utils.py:1236: in is_torch_greater_or_equal
    if not _is_package_available("torch"):
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv_dev/lib/python3.13/site-packages/transformers/utils/import_utils.py:47: in _is_package_available
    package_exists = importlib.util.find_spec(pkg_name) is not None
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib.util>:108: in find_spec
    ???
E   ValueError: torch.__spec__ is not set

The above exception was the direct cause of the following exception:
tests/e2e/test_real_world_trl_demo.py:41: in <module>
    from trl import AutoModelForCausalLMWithValueHead, PPOConfig, PPOTrainer
<frozen importlib._bootstrap>:1412: in _handle_fromlist
    ???
.venv_dev/lib/python3.13/site-packages/trl/import_utils.py:135: in __getattr__
    value = getattr(module, name)
            ^^^^^^^^^^^^^^^^^^^^^
.venv_dev/lib/python3.13/site-packages/trl/import_utils.py:134: in __getattr__
    module = self._get_module(self._class_to_module[name])
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv_dev/lib/python3.13/site-packages/trl/import_utils.py:146: in _get_module
    raise RuntimeError(
E   RuntimeError: Failed to import trl.models.modeling_value_head because of the following error (look up to see its traceback):
E   torch.__spec__ is not set
________________ ERROR collecting tests/integration/test_cli.py ________________
tests/integration/test_cli.py:11: in <module>
    from rldk.cli import app
src/rldk/cli.py:50: in <module>
    from rldk.reward import health
src/rldk/reward/__init__.py:4: in <module>
    from . import health_analysis as health_module
src/rldk/reward/health_analysis.py:9: in <module>
    from .calibration import analyze_calibration
src/rldk/reward/calibration.py:7: in <module>
    from sklearn.calibration import calibration_curve
.venv_dev/lib/python3.13/site-packages/sklearn/calibration.py:17: in <module>
    from ._loss import HalfBinomialLoss
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/__init__.py:9: in <module>
    from .loss import (
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/loss.py:42: in <module>
    from .link import (
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/link.py:89: in <module>
    class BaseLink(ABC):
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/link.py:109: in BaseLink
    interval_y_pred = Interval(-np.inf, np.inf, False, False)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<string>:7: in __init__
    ???
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/link.py:27: in __post_init__
    if self.low > self.high:
       ^^^^^^^^^^^^^^^^^^^^
E   TypeError: '>' not supported between instances of 'MagicMock' and 'MagicMock'
___________ ERROR collecting tests/integration/test_reward_drift.py ____________
tests/integration/test_reward_drift.py:10: in <module>
    from rldk.reward.drift import compare_models
src/rldk/reward/__init__.py:4: in <module>
    from . import health_analysis as health_module
src/rldk/reward/health_analysis.py:9: in <module>
    from .calibration import analyze_calibration
src/rldk/reward/calibration.py:7: in <module>
    from sklearn.calibration import calibration_curve
.venv_dev/lib/python3.13/site-packages/sklearn/calibration.py:17: in <module>
    from ._loss import HalfBinomialLoss
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/__init__.py:9: in <module>
    from .loss import (
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/loss.py:42: in <module>
    from .link import (
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/link.py:89: in <module>
    class BaseLink(ABC):
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/link.py:109: in BaseLink
    interval_y_pred = Interval(-np.inf, np.inf, False, False)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<string>:7: in __init__
    ???
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/link.py:27: in __post_init__
    if self.low > self.high:
       ^^^^^^^^^^^^^^^^^^^^
E   TypeError: '>' not supported between instances of 'MagicMock' and 'MagicMock'
___________ ERROR collecting tests/integration/test_reward_health.py ___________
tests/integration/test_reward_health.py:7: in <module>
    from rldk.reward.calibration import analyze_calibration
src/rldk/reward/__init__.py:4: in <module>
    from . import health_analysis as health_module
src/rldk/reward/health_analysis.py:9: in <module>
    from .calibration import analyze_calibration
src/rldk/reward/calibration.py:7: in <module>
    from sklearn.calibration import calibration_curve
.venv_dev/lib/python3.13/site-packages/sklearn/calibration.py:17: in <module>
    from ._loss import HalfBinomialLoss
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/__init__.py:9: in <module>
    from .loss import (
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/loss.py:42: in <module>
    from .link import (
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/link.py:89: in <module>
    class BaseLink(ABC):
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/link.py:109: in BaseLink
    interval_y_pred = Interval(-np.inf, np.inf, False, False)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<string>:7: in __init__
    ???
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/link.py:27: in __post_init__
    if self.low > self.high:
       ^^^^^^^^^^^^^^^^^^^^
E   TypeError: '>' not supported between instances of 'MagicMock' and 'MagicMock'
___________ ERROR collecting tests/integration/test_trl_callbacks.py ___________
ImportError while importing test module '/workspace/tests/integration/test_trl_callbacks.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
/usr/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests/integration/test_trl_callbacks.py:11: in <module>
    from rldk.integrations.trl.callbacks import RLDKCallback, RLDKMetrics
src/rldk/integrations/trl/__init__.py:3: in <module>
    from .callbacks import RLDKCallback, RLDKMetrics, RLDKMonitor
src/rldk/integrations/trl/callbacks.py:13: in <module>
    from transformers import (
E   ImportError: cannot import name 'TrainerCallback' from '<unknown module name>' (unknown location)
_______ ERROR collecting tests/reward_health/test_default_thresholds.py ________
tests/reward_health/test_default_thresholds.py:10: in <module>
    from rldk.reward.health_config.config import (
src/rldk/reward/__init__.py:4: in <module>
    from . import health_analysis as health_module
src/rldk/reward/health_analysis.py:9: in <module>
    from .calibration import analyze_calibration
src/rldk/reward/calibration.py:7: in <module>
    from sklearn.calibration import calibration_curve
.venv_dev/lib/python3.13/site-packages/sklearn/calibration.py:17: in <module>
    from ._loss import HalfBinomialLoss
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/__init__.py:9: in <module>
    from .loss import (
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/loss.py:42: in <module>
    from .link import (
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/link.py:89: in <module>
    class BaseLink(ABC):
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/link.py:109: in BaseLink
    interval_y_pred = Interval(-np.inf, np.inf, False, False)
                               ^^^^^^^
E   TypeError: bad operand type for unary -: 'function'
______________ ERROR collecting tests/reward_health/test_gate.py _______________
tests/reward_health/test_gate.py:10: in <module>
    from rldk.reward.health_utils.exit_codes import get_exit_code, raise_on_failure
src/rldk/reward/__init__.py:4: in <module>
    from . import health_analysis as health_module
src/rldk/reward/health_analysis.py:9: in <module>
    from .calibration import analyze_calibration
src/rldk/reward/calibration.py:7: in <module>
    from sklearn.calibration import calibration_curve
.venv_dev/lib/python3.13/site-packages/sklearn/calibration.py:17: in <module>
    from ._loss import HalfBinomialLoss
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/__init__.py:9: in <module>
    from .loss import (
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/loss.py:42: in <module>
    from .link import (
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/link.py:89: in <module>
    class BaseLink(ABC):
.venv_dev/lib/python3.13/site-packages/sklearn/_loss/link.py:109: in BaseLink
    interval_y_pred = Interval(-np.inf, np.inf, False, False)
                               ^^^^^^^
E   TypeError: bad operand type for unary -: 'function'
___________ ERROR collecting tests/unit/test_deterministic_fixes.py ____________
ImportError while importing test module '/workspace/tests/unit/test_deterministic_fixes.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
/usr/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests/unit/test_deterministic_fixes.py:178: in <module>
    from src.rldk.tracking import DatasetTracker, ModelTracker, SeedTracker
src/rldk/tracking/__init__.py:13: in <module>
    from .dataset_tracker import DatasetTracker
src/rldk/tracking/dataset_tracker.py:17: in <module>
    from datasets import Dataset, DatasetDict
E   ImportError: cannot import name 'Dataset' from '<unknown module name>' (unknown location)
____________ ERROR collecting tests/unit/test_flexible_adapters.py _____________
import file mismatch:
imported module 'test_flexible_adapters' has this __file__ attribute:
  /workspace/test_flexible_adapters.py
which is not the same as the test file we want to collect:
  /workspace/tests/unit/test_flexible_adapters.py
HINT: remove __pycache__ / .pyc files and/or use a unique basename for your test file modules
___________ ERROR collecting tests/unit/test_utils_error_handling.py ___________
ImportError while importing test module '/workspace/tests/unit/test_utils_error_handling.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
/usr/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests/unit/test_utils_error_handling.py:45: in <module>
    from rldk.utils.validation import (
E   ImportError: cannot import name 'validate_json_file_streaming' from 'rldk.utils.validation' (/workspace/src/rldk/utils/validation.py)
=========================== short test summary info ============================
ERROR test_kl_direct.py
ERROR tests/e2e/test_real_world_trl_demo.py - RuntimeError: Failed to import ...
ERROR tests/integration/test_cli.py - TypeError: '>' not supported between in...
ERROR tests/integration/test_reward_drift.py - TypeError: '>' not supported b...
ERROR tests/integration/test_reward_health.py - TypeError: '>' not supported ...
ERROR tests/integration/test_trl_callbacks.py
ERROR tests/reward_health/test_default_thresholds.py - TypeError: bad operand...
ERROR tests/reward_health/test_gate.py - TypeError: bad operand type for unar...
ERROR tests/unit/test_deterministic_fixes.py
ERROR tests/unit/test_flexible_adapters.py
ERROR tests/unit/test_utils_error_handling.py
!!!!!!!!!!!!!!!!!!! Interrupted: 11 errors during collection !!!!!!!!!!!!!!!!!!!
11 errors in 10.14s
